Added README.md File

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLAMES Calculator</title>
     <meta name="description" content="Dare To Calculate Your Relation Status" />
-    <meta name="keywords" content="Flames Calculator | Will Friend Tends To Love ?" />
+    <meta name="keywords" content="Will Friend Tends To Love ? | Flames Calculator" />
     <meta name="author" content="SEERAM SANDEEP" />
 
     <!-- Image -->
     <meta property="og:site_name" content="Flames Calculator">
-    <meta property="og:title" content="Flames Calculator | Will Friend Tends To Love ?">
+    <meta property="og:title" content="Will Friend Tends To Love ? | Flames Calculator">
     <meta property="og:description" content="Dare To Calculate Your Relation Status">
-    <meta property="og:image" itemprop="image" content="./images/logo.jpg"/>
+    <meta property="og:image" itemprop="image" content="/images/logo.png"/>
     <meta property="og:type" content="website">
-    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     
