Changed Meta Tag Content

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FLAMES Calculator</title>
+    <title>Affection Algorithm</title>
     <meta name="description" content="Dare To Calculate Your Relation Status" />
     <meta name="keywords" content="Will Friend Tends To Love ? | Flames Calculator" />
     <meta name="author" content="SEERAM SANDEEP" />
 
     <!-- Image -->
-    <meta property="og:site_name" content="Flames Calculator">
-    <meta property="og:title" content="Will Friend Tends To Love ? | Flames Calculator">
+    <meta property="og:site_name" content="Affection Algorithm | Flames Calculator">
+    <meta property="og:title" content="Will Friend Tends To Love ? | Affection Algorithm | Flames Calculator">
     <meta property="og:description" content="Dare To Calculate Your Relation Status">
     <meta property="og:image" itemprop="image" content="/images/logo.png"/>
     <meta property="og:type" content="website">
@@ -18,7 +18,6 @@
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
 
-    
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
